--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,10 @@ website:
     left:
       - text: Home
         href: index.qmd
+      - text: Data
+        href: data.qmd
+      - text: Analysis
+        href: analysis.qmd
 
             
     tools:
